--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <button id="BT1">Apreta</button>
     </div>
     <div class="hide" id="contenidoOculto">
-        <p>Feliz Primavera Naza!!</p>
+        <p>Feliz Primavera Luly!!</p>
         <img src="ramo-de-10-girasoles.png" alt="Ramo de girasoles">
     </div>
 
@@ -115,4 +115,5 @@
         });
     </script>
 </body>
+
 </html>
